src/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Membership</relationshipLabel>
        <relationshipName>Membership</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <picklist>
            <picklistValues>
                <fullName>Family Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Membership</relationshipLabel>
        <relationshipName>Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Membership</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Membership Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>